# llm-rs

./: .gitignore  Cargo.toml  README.md  build.rs
kernels/: add_kernel.cu  add_scalar_kernel.cu  apply_attention_backward_kernel.cu  apply_attention_kernel.cu  attention_scores_backward_kernel.cu  attention_scores_kernel.cu  cross_entropy_kernel.cu  div_kernel.cu  embedding_backward_kernel.cu  embedding_lookup_kernel.cu  exp_kernel.cu  layer_norm_kernel.cu  matmul_kernel.cu  max_reduce_kernel.cu  merge_heads_kernel.cu  mul_kernel.cu  relu_backward_kernel.cu  relu_kernel.cu  split_heads_kernel.cu  sub_kernel.cu  sum_reduce_kernel.cu  transpose_kernel.cu
src/: dataset.rs  kernel_cache.rs  layers.rs  lib.rs  main.rs  model.rs  tensor.rs  tokenizer.rs  train.rs
